--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Netify hosted page https://thirsty-blackwell-e68dc7.netlify.app/
+Git_Pages hosted page https://gokul1114.github.io/frontEndMentor_Stats-preview-card-newbie-/ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
